@@ -1588,7 +1588,7 @@ class Accept(ImmutableList):
             for client_item, quality in self:
                 if quality <= best_quality:
                     break
-                if self._value_matches(client_item, server_item):
+                if self._value_matches(server_item, client_item):
                     best_quality = quality
                     result = server_item
         return result
